[package]
name = "azul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "azul"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
rand = { version = "0.8.5" }
colored = { version = "2.0.0" }
itertools = { version = "0.10.5" }
